2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/_version.py: bumped to version 0.2.0
	* README.rst: Added "Installation" section.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* Makefile: Added

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/cbox.py (main): Added `IOError` in the catch block that
	handles errors when opening the combox configuration file.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* README.rst: fixed lint errors.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/_version.py: bumped to version 0.2.0.rc1

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* docs/: Added it. Uses sphinx.
	* MANIFEST.in: added docs/

2015-12-21 Siddharth Ravikumar <sravik@bgsu.edu>

	* MANIFEST.in: Added it.
	* combox/_version.py: Added it.

2015-12-21 Siddharth Ravikumar <sravik@bgsu.edu>

	* setup.py: overhauled it.

2015-12-21 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py (NodeDirMonitor.on_moved): Now uses
	`os.renames` function instead `os.rename` to create intermediate
	directories if they're non-existent.
	* combox/file.py (move_nodedir, move_shards): Now uses
	`os.renames` function instead `os.rename` to create intermediate
	directories if they're non-existent.

2015-12-21 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 8c86e7c28738c66c0e04ae7886b44dbcdfc6369e

	* combox/events.py (ComboxDirMonitor.on_modified)
	(NodeDirMonitor.on_modified): 'file modified' event that is
	triggered by watchdog after file creation only happens in
	GNU/Linux; modified the functions so that they handle it only on
	GNU/Linux.

2015-12-13 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/cbox.py (main): When it has to configure combox, it uses
	the graphical interface by default, if the '-nw' or '--cli' is
	provided, it uses the text/commandline interface.

2015-12-13 Siddharth Ravikumar <sravik@bgsu.edu>
	* combox/gui.py (ComboxConfigDialog.__init__): accepts a new